# opengeosgb

./: .dockerignore  .env  .env.dev  .env.sample  .gitignore  .gitmodules  .override_dev_env.sample  Dockerfile  Makefile  README.md  docker-compose.development.yml  docker-compose.opengeosgb.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  geonode-stack.yml  manage.py  manage.sh  manage_dev.sh.sample  monitoring-cron  opengeosgb-alias.sh  pavement.py  playbook.yml  requirements.txt  setup.py  tasks.py  uwsgi.ini
.devcontainer/: .env  (+2 more)
src/: README.md  celery-cmd  celery.sh  constraints.txt  entrypoint.sh  manage.sh  pavement.py  pyproject.toml  requirements.txt  setup.py  tasks.py  uwsgi.ini
src/opengeosgb/: __init__.py  admin.py  apps.py  celeryapp.py  local_settings.py  settings.py  urls.py  wsgi.py
src/opengeosgb/account/: forms.py  profileextractors.py
src/opengeosgb/br/: backup.sh  restore.sh  settings_docker.ini
src/opengeosgb/harvesters/: notes.md
src/opengeosgb/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
src/opengeosgb/static/: package.json
src/opengeosgb/static/mapstore/gn-translations/: data.pt-BR.json
src/opengeosgb/static/mapstore/ms-translations/: data.pt-BR.json
src/opengeosgb/static/opengeosgb/css/: govbr-button.html  govbr.css  govbr.css.map  govbr.min.css
src/opengeosgb/static/scss/: govbr.scss
src/opengeosgb/templates/: geonode_base.html
src/opengeosgb/templates/account/: login.html  signup.html
src/opengeosgb/templates/avatar/: change.html
src/opengeosgb/templates/flatpages/: default.html
(+20 files in other folders)
